--- a/css/style.css
+++ b/css/style.css
@@ -592,11 +592,11 @@ footer {
   margin-bottom: 82px; }
 
 .skew {
-  -webkit-transform: skewY(-5deg);
-  -moz-transform: skewY(-5deg);
-  -o-transform: skewY(-5deg);
-  -ms-transform: skewY(-5deg);
-  transform: skewY(-5deg);
+  -webkit-transform: skewY(-3deg);
+  -moz-transform: skewY(-3deg);
+  -o-transform: skewY(-3deg);
+  -ms-transform: skewY(-3deg);
+  transform: skewY(-3deg);
   -webkit-backface-visibility: hidden;
   -ms-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
@@ -609,11 +609,11 @@ footer {
   filter: progid:DXImageTransform.Microsoft.Matrix(M11=1, M12=0.28674538575880865, M21=0, M22=1, SizingMethod='auto expand'); }
 
 .skew-fix {
-  -webkit-transform: skewY(5deg);
-  -moz-transform: skewY(5deg);
-  -o-transform: skewY(5deg);
-  -ms-transform: skewY(5deg);
-  transform: skewY(5deg);
+  -webkit-transform: skewY(3deg);
+  -moz-transform: skewY(3deg);
+  -o-transform: skewY(3deg);
+  -ms-transform: skewY(3deg);
+  transform: skewY(3deg);
   -webkit-backface-visibility: hidden;
   -ms-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
@@ -632,7 +632,7 @@ footer {
 
 .about-section {
   background-color: #373235;
-  padding-bottom: 180px; }
+  margin-top: -80px; }
   .about-section h2 {
     padding-bottom: 30px; }
 
@@ -650,12 +650,15 @@ footer {
 .read-btn {
   margin-bottom: 180px; }
 
+.learn-btn {
+  margin-bottom: 180px; }
+
 /* About us section ends
 ===================================*/
 /* Prices section 
 ===================================*/
 .prices-section {
-  margin-top: -18px;
+  margin-top: -100px;
   background: #334d69;
   border: 1px solid #334d69; }
   .prices-section h2 {
@@ -740,7 +743,7 @@ footer {
 
 .map-section {
   background: #4c4c4c;
-  margin-top: -18px;
+  margin-top: -100px;
   padding-bottom: 180px; }
   .map-section a {
     color: white;
@@ -751,7 +754,6 @@ footer {
 
 .hours-section {
   background: #96d59e;
-  margin-top: 120px;
   padding-bottom: 180px; }
   .hours-section h2 {
     text-align: center;
@@ -799,14 +801,13 @@ footer {
 
 /* Helpers for top position on internal page links
 ====================================================*/
-#spytop:before,
 .all-padding:before {
   display: block;
   content: " ";
   margin-top: -100px;
   min-height: 100px;
   visibility: hidden;
-  padding-top: 140px; }
+  margin-top: 80px; }
 
 /* jQuery Styles
 ===================================*/
