--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ h2,
 
 .container {
   max-width: 1400px;
-  margin: auto; }
+  margin: 0 15px 0 15px; }
 
 .item {
   background-size: cover;
@@ -711,7 +711,7 @@ footer {
   background: #3fa6ad;
   margin-top: 0px;
   border: 1px solid #3fa6ad;
-  padding-bottom: 180px; }
+  padding-bottom: 120px; }
 
 .main-rental-contain {
   padding-bottom: 180px;
@@ -808,10 +808,8 @@ footer {
 .all-padding:before {
   display: block;
   content: " ";
-  margin-top: -100px;
-  min-height: 100px;
   visibility: hidden;
-  margin-top: 80px; }
+  margin-top: 120px; }
 
 /* jQuery Styles
 ===================================*/
