--- a/css/style.scss
+++ b/css/style.scss
@@ -112,7 +112,6 @@ footer {
     padding: 48px;
     box-shadow: none;
     border: none;
-    background: white;
 }
 
 .dropdown-menu li a {
@@ -134,7 +133,6 @@ footer {
 
 .all-container {
     margin-top: 60px;
-
 }
 
 .section-img {
@@ -144,18 +142,17 @@ footer {
 }
 
 .skew {
-   
     -webkit-transform: skewY(-3deg);
     -moz-transform: skewY(-3deg);
     -o-transform: skewY(-3deg);
     -ms-transform: skewY(-3deg);
     transform: skewY(-3deg);
-     -webkit-backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     -ms-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
     backface-visibility: hidden;
     outline: 1px solid transparent;
-     padding: 2px;
+    padding: 2px;
     /* IE8+ */
     -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=1, M12=0.28674538575880865, M21=0, M22=1, SizingMethod='auto expand')";
     /* IE6 and 7 */
@@ -163,7 +160,6 @@ footer {
 }
 
 .skew-fix {
-
     -webkit-transform: skewY(3deg);
     -moz-transform: skewY(3deg);
     -o-transform: skewY(3deg);
@@ -174,7 +170,7 @@ footer {
     -moz-backface-visibility: hidden;
     backface-visibility: hidden;
     outline: 1px solid transparent;
-     padding: 2px;
+    padding: 2px;
     /* IE8+ */
     -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=1, M12=0.28674538575880865, M21=0, M22=1, SizingMethod='auto expand')";
     /* IE6 and 7 */
@@ -186,14 +182,13 @@ footer {
 
 .img-fix {
     width: 100%;
+    outline: 1px solid transparent;
 }
 
 .about-section {
     background-color: #373235;
-    margin-top:-80px;
-
-
-
+    margin-top: -50px;
+    padding-bottom: 120px;
     h2 {
         padding-bottom: 30px;
     }
@@ -212,13 +207,10 @@ footer {
 }
 
 .read-btn {
-    margin-bottom: 180px;
+    margin-bottom: 120px;
 }
 
-.learn-btn {
-
-    margin-bottom:180px;
-}
+.learn-btn {}
 
 /* About us section ends
 ===================================*/
@@ -227,19 +219,17 @@ footer {
 ===================================*/
 
 .prices-section {
-
     margin-top: -100px;
     background: #334d69;
-       border: 1px solid #334d69;
+    border: 1px solid #334d69;
+    padding-bottom: 120px;
     h2 {
-        padding-bottom: 80px;
+        padding-bottom: 90px;
     }
 }
 
-
 .prices-container {
-    margin-bottom: 120px;
-     
+    margin-bottom: 165px;
     .prices-bar, .rental-bar {
         background: #1e2e41;
         height: 30px;
@@ -247,24 +237,24 @@ footer {
     .prices-circle {
         margin: 0 auto;
         position: relative;
-        bottom: 50px;
+        bottom: 60px;
         width: 80px;
         height: 80px;
         background-color: #faba56;
-        background-image: url("../images/ticket1.png");
+        background-image: url("../images/ticket2.png");
         background-repeat: no-repeat;
-        background-position: 8px 10px;
+        background-position: 16px 16px;
         border-radius: 40px;
     }
     ul {}
     li {
         text-align: center;
         background: #ebebeb;
-        margin-top: 4px;
+        margin-bottom: 4px;
     }
-    .cable-color {
-        background: $lightblue;
-    }
+    // .cable-color {
+    //     background: $lightblue;
+    // }
 }
 
 /* Prices section ends
@@ -277,7 +267,6 @@ footer {
     font-size: 20px;
     font-weight: bold;
     margin-top: -80px;
-    margin-bottom: 180px;
     border-radius: 5px;
 }
 
@@ -296,16 +285,13 @@ footer {
     background: #3fa6ad;
     margin-top: 0px;
     border: 1px solid #3fa6ad;
-      padding-bottom: 120px;
-
+    padding-bottom: 120px;
 }
 
 .main-rental-contain {
-        padding-bottom: 180px;
-      
     h2 {
         text-align: center;
-        padding-bottom: 80px;
+        padding-bottom: 90px;
     }
     .rental-bar {
         background: #1e2e41;
@@ -316,8 +302,11 @@ footer {
             background: #faba56;
             border-radius: 50px;
             position: relative;
-            bottom: 55px;
+            bottom: 60px;
             margin: 0 auto;
+            background-image: url("../images/helmet.png");
+            background-repeat: no-repeat;
+            background-position: 16px 16px;
         }
     }
     .rental-prices {
@@ -333,7 +322,21 @@ footer {
 /* map
 ===================================*
 */
-.embed-container {}
+.embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+}
+
+.embed-container iframe, .embed-container object, .embed-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
 .map-contain {
     width: 100%;
@@ -342,21 +345,25 @@ footer {
 .contact-section {
     background: #4c4c4c;
     margin-top: -100px;
-    padding-bottom: 180px;
+    padding-bottom: 120px;
+    h2 {
+        padding-bottom: 30px;
+    }
     a {
         color: white;
         font-size: 20px;
         text-align: center;
         display: block;
         text-decoration: underline;
+        &:last-of-type {
+            margin-bottom: 10px;
+        }
     }
 }
 
 .hours-section {
     background: #96d59e;
-   
-    padding-bottom: 180px;
- 
+    padding-bottom: 120px;
     h2 {
         text-align: center;
         padding-bottom: 80px;
@@ -372,6 +379,9 @@ footer {
             position: relative;
             bottom: 55px;
             margin: 0 auto;
+            background-image: url("../images/clock.png");
+            background-repeat: no-repeat;
+            background-position: 16px 16px;
         }
     }
     .hours-prices {
@@ -385,10 +395,10 @@ footer {
 // ===================================*/
 .top {
     display: none;
-    background-color: $iconred;
+    background-color: #faba56;
     bottom: 2em;
     color: #FFF;
-    opacity: 0.8;
+    opacity: 0.9;
     padding: 1.2em;
     position: fixed;
     right: 1.5em;
@@ -417,7 +427,6 @@ footer {
 .all-padding:before {
     display: block;
     content: " ";
-  
     visibility: hidden;
     margin-top: 120px;
 }
