--- a/css/style.scss
+++ b/css/style.scss
@@ -206,6 +206,30 @@ footer {
     color: black;
 }
 
+
+
+// .read-btn {
+
+//   box-shadow: 0px 5px 0px 0px #84BB8B;
+// }
+
+.read-btn:hover {
+  background-color: #69956F;
+  color:white;
+  text-decoration: none;
+}
+.learn-btn:hover{
+      background-color: #69956F;
+  color:white;
+  text-decoration: none;
+}
+
+
+
+
+
+
+
 .read-btn {
     margin-bottom: 120px;
 }
@@ -229,7 +253,7 @@ footer {
 }
 
 .prices-container {
-    margin-bottom: 165px;
+    margin-bottom: 180px;
     .prices-bar, .rental-bar {
         background: #1e2e41;
         height: 30px;
@@ -268,6 +292,7 @@ footer {
     font-weight: bold;
     margin-top: -80px;
     border-radius: 5px;
+    border-bottom:4px solid black;
 }
 
 /* rentals section
@@ -342,6 +367,9 @@ footer {
     width: 100%;
 }
 
+.directions-marg{
+    margin-bottom:120px;
+}
 .contact-section {
     background: #4c4c4c;
     margin-top: -100px;
