fixing prices section on large querie

--- a/css/_mediaqueries.scss
+++ b/css/_mediaqueries.scss
@@ -38,10 +38,11 @@ max-width:350px;
         padding-left: 40px;
     }
 
-
-
+.prices-container {
+  margin-right:4px;
+    width:32.9%;
 }
-
+}
 @media screen and (min-width: 1200px) {
 //     	.row-change{
 //         margin-right: -85px;
