--- a/css/style.scss
+++ b/css/style.scss
@@ -141,6 +141,12 @@ footer {
     margin-bottom: 82px;
 }
 
+li{
+    &:last-of-type{
+            box-shadow: 0 10px 6px -6px rgba(0, 0, 0, 0.5);
+ // 0px 5px 0px 0px 
+        }
+}
 .skew {
     -webkit-transform: skewY(-3deg);
     -moz-transform: skewY(-3deg);
@@ -204,9 +210,8 @@ footer {
     text-align: center;
     border-radius: 0.3em;
     color: black;
+        border-bottom: 4px solid rgba(0, 0, 0, 0.5);
 }
-
-
 
 // .read-btn {
 
@@ -214,21 +219,16 @@ footer {
 // }
 
 .read-btn:hover {
-  background-color: #69956F;
-  color:white;
-  text-decoration: none;
-}
-.learn-btn:hover{
-      background-color: #69956F;
-  color:white;
-  text-decoration: none;
+    background-color: #69956F;
+    color: white;
+    text-decoration: none;
 }
 
-
-
-
-
-
+.learn-btn:hover {
+    background-color: #69956F;
+    color: white;
+    text-decoration: none;
+}
 
 .read-btn {
     margin-bottom: 120px;
@@ -254,6 +254,16 @@ footer {
 
 .prices-container {
     margin-bottom: 180px;
+ 
+  
+     
+
+    li {
+        &:first-of-type {
+            background: #9fa9b2;
+        }
+        
+    }
     .prices-bar, .rental-bar {
         background: #1e2e41;
         height: 30px;
@@ -270,7 +280,9 @@ footer {
         background-position: 16px 16px;
         border-radius: 40px;
     }
-    ul {}
+    // ul {
+    //     width:100%;
+    // }
     li {
         text-align: center;
         background: #ebebeb;
@@ -292,7 +304,14 @@ footer {
     font-weight: bold;
     margin-top: -80px;
     border-radius: 5px;
-    border-bottom:4px solid black;
+    border-bottom: 4px solid rgba(0, 0, 0, 0.5);
+
+}
+
+.camp-btn:hover {
+    background-color: #69956F;
+    color: white;
+    text-decoration: none;
 }
 
 /* rentals section
@@ -367,9 +386,10 @@ footer {
     width: 100%;
 }
 
-.directions-marg{
-    margin-bottom:120px;
+.directions-marg {
+    margin-bottom: 120px;
 }
+
 .contact-section {
     background: #4c4c4c;
     margin-top: -100px;
