--- a/css/_mediaqueries.scss
+++ b/css/_mediaqueries.scss
@@ -1,4 +1,8 @@
-
+@media (min-width: 480px) {
+    body {
+        font-size: 18px;
+    }
+}
 
 @media screen and (min-width: 500px) {
 max-width:350px;
@@ -28,9 +32,9 @@ max-width:350px;
         min-height: 1px;
        
     }
-    // .whatis-section {
-    //     margin-top: 0px;
-    // }
+   .program-marg-large{
+        margin-bottom:160px;
+    }
     .lefty {
         padding-right: 40px;
     }
