--- a/css/style.scss
+++ b/css/style.scss
@@ -8,6 +8,7 @@
 
 * {
     font-family: 'Open Sans', sans-serif;
+    font-weight:300;
 }
 
 h2 {
@@ -23,9 +24,13 @@ h3, p {
 
 h3 {
     font-weight: 800;
-    font-size: 26px;
+    font-size: 28px;
 }
 
+h4{
+    color:white;
+    font-weight:bold;
+}
 li {
     font-weight: 800;
 }
@@ -96,10 +101,12 @@ footer {
 .navbar-default .navbar-brand,
 .navbar-default .navbar-nav > li > a {
     color: #183532;
+    font-weight:800;
 }
 
 .navbar-default .navbar-nav > li {
     margin-right: 8px;
+
 
 }
 
@@ -117,6 +124,7 @@ footer {
 .navbar-default .navbar-nav > .open > a:focus {
     background: #373235;
     color: #faba56;
+
 }
 
 .dropdown-menu {
@@ -170,6 +178,7 @@ footer {
     -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=1, M12=0.28674538575880865, M21=0, M22=1, SizingMethod='auto expand')";
     /* IE6 and 7 */
     filter: progid:DXImageTransform.Microsoft.Matrix(M11=1, M12=0.28674538575880865, M21=0, M22=1, SizingMethod='auto expand');
+
 }
 
 .skew-fix {
@@ -366,10 +375,9 @@ footer {
     }
 }
 
-// /* Rental section ends
-// ===================================*/
 
-/* map
+
+/* Location Section
 ===================================*
 */
 .embed-container {
@@ -408,9 +416,10 @@ footer {
         font-size: 20px;
         text-align: center;
         display: block;
-        text-decoration: underline;
+       
         &:last-of-type {
-            margin-bottom: 10px;
+            margin-bottom: 40px;
+             text-decoration: underline;
         }
     }
 }
@@ -471,8 +480,20 @@ footer {
 .events-section {
     background: #334d69;
      border: 1px solid #334d69;
+     padding-bottom:120px;
      h2{
+
         margin-bottom:30px;
+     }
+
+     li{
+         color:white;
+         list-style-type: circle;
+          font-weight:300;
+         &:last-of-type {
+        box-shadow:none;
+
+    }
      }
 }
 
@@ -504,6 +525,9 @@ footer {
     height: 200px;
     width: 100%;
     background: #283332;
+    .footer-section{
+        margin-top:-150px;
+    }
 }
 
 /* Helpers for top position on internal page links
