--- a/css/style.scss
+++ b/css/style.scss
@@ -8,7 +8,7 @@
 
 * {
     font-family: 'Open Sans', sans-serif;
-    font-weight:300;
+    font-weight: 300;
 }
 
 h2 {
@@ -27,10 +27,11 @@ h3 {
     font-size: 28px;
 }
 
-h4{
-    color:white;
-    font-weight:bold;
+h4 {
+    color: white;
+    font-weight: bold;
 }
+
 li {
     font-weight: 800;
 }
@@ -50,7 +51,6 @@ li {
 .navbar-default .navbar-toggle {
     border-color: white;
 }
-
 
 // .carousel-caption1 {
 //     text-align: left;
@@ -101,17 +101,16 @@ footer {
 .navbar-default .navbar-brand,
 .navbar-default .navbar-nav > li > a {
     color: #183532;
-    font-weight:800;
+    font-weight: 800;
 }
 
 .navbar-default .navbar-nav > li {
     margin-right: 8px;
-
-
 }
 
 .navbar-default .navbar-nav > li:last-of-type {
     margin-right: 0;
+    box-shadow:none;
 }
 
 .dropdown-menu,
@@ -124,7 +123,6 @@ footer {
 .navbar-default .navbar-nav > .open > a:focus {
     background: #373235;
     color: #faba56;
-
 }
 
 .dropdown-menu {
@@ -160,8 +158,6 @@ footer {
     margin-bottom: 82px;
 }
 
-
-
 .skew {
     -webkit-transform: skewY(-3deg);
     -moz-transform: skewY(-3deg);
@@ -178,7 +174,6 @@ footer {
     -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=1, M12=0.28674538575880865, M21=0, M22=1, SizingMethod='auto expand')";
     /* IE6 and 7 */
     filter: progid:DXImageTransform.Microsoft.Matrix(M11=1, M12=0.28674538575880865, M21=0, M22=1, SizingMethod='auto expand');
-
 }
 
 .skew-fix {
@@ -205,7 +200,6 @@ footer {
 .img-fix {
     width: 100%;
     outline: 1px solid transparent;
-    
 }
 
 .about-section {
@@ -217,11 +211,11 @@ footer {
     }
 }
 
-.clear{
-    clear:both;
+.clear {
+    clear: both;
 }
 
-.read-btn, .learn-btn {
+.btn {
     margin-top: 30px;
     background: #96d59e;
     font-weight: 800;
@@ -239,17 +233,13 @@ footer {
 //   box-shadow: 0px 5px 0px 0px #84BB8B;
 // }
 
-.read-btn:hover {
+.btn:hover {
     background-color: #69956F;
     color: white;
     text-decoration: none;
 }
 
-.learn-btn:hover {
-    background-color: #69956F;
-    color: white;
-    text-decoration: none;
-}
+
 
 .read-btn {
     margin-bottom: 120px;
@@ -268,6 +258,7 @@ footer {
     background: #334d69;
     border: 1px solid #334d69;
     padding-bottom: 120px;
+    width:100%;
     h2 {
         padding-bottom: 90px;
     }
@@ -275,6 +266,10 @@ footer {
 
 .prices-container {
     margin-bottom: 180px;
+    &:last-child{
+        margin-bottom:0;
+    }
+    
     li {
         &:first-of-type {
             background: #9fa9b2;
@@ -309,35 +304,26 @@ footer {
     // }
 }
 
-/* Prices section ends
-===================================*/
 
-.camp-btn {
-    background: #96d59e;
-    text-align: center;
-    padding: 15px;
-    font-size: 20px;
-    font-weight: bold;
-    margin-top: -80px;
-    border-radius: 5px;
-    border-bottom: 4px solid rgba(0, 0, 0, 0.5);
-}
 
-.camp-btn:hover {
-    background-color: #69956F;
-    color: white;
-    text-decoration: none;
-}
+
+
+
 
 /* rentals section
 ===================================*/
 
 .small-ul {
     font-size: 20px;
+    display: inline-block;
+    padding-top: 12px;
 }
 
 .big-ul {
     font-size: 40px;
+    margin-top: -55px;
+    display: inline-block;
+    margin-top: -5px;
 }
 
 .rental-section {
@@ -375,15 +361,12 @@ footer {
     }
 }
 
-
-
 /* Location Section
 ===================================*
 */
 .embed-container {
     position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
+    min-height: 200px;
     overflow: hidden;
     max-width: 100%;
 }
@@ -393,18 +376,17 @@ footer {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
 }
 
 .map-contain {
     width: 100%;
 }
 
-.directions-marg{
-    margin-bottom:100px;
+.directions-marg {
+    margin-bottom: 100px;
 }
 
-.contact-section {
+.location-section {
     background: #4c4c4c;
     margin-top: -100px;
     padding-bottom: 120px;
@@ -416,10 +398,9 @@ footer {
         font-size: 20px;
         text-align: center;
         display: block;
-       
         &:last-of-type {
             margin-bottom: 40px;
-             text-decoration: underline;
+            text-decoration: underline;
         }
     }
 }
@@ -440,7 +421,7 @@ footer {
             background: #faba56;
             border-radius: 50px;
             position: relative;
-            bottom: 55px;
+            bottom: 60px;
             margin: 0 auto;
             background-image: url("../images/clock.png");
             background-repeat: no-repeat;
@@ -458,43 +439,39 @@ footer {
 // ===================================*/
 .programs-section {
     background: #373235;
-    padding-bottom:120px;
-    h2{
-        margin-bottom:30px;
+    padding-bottom: 120px;
+    h2 {
+        margin-bottom: 50px;
     }
     // h3{
     //     margin-top:0px;
     // }
-    .program-marg{
-       margin-bottom:160px;
-     
+    .program-marg {
+        margin-bottom: 160px;
     }
-
 }
-
-
 
 // /* Events Section
 // ===================================*/
 
 .events-section {
     background: #334d69;
-     border: 1px solid #334d69;
-     padding-bottom:120px;
-     h2{
-
-        margin-bottom:30px;
-     }
-
-     li{
-         color:white;
-         list-style-type: circle;
-          font-weight:300;
-         &:last-of-type {
-        box-shadow:none;
-
+    border: 1px solid #334d69;
+    padding-bottom: 120px;
+    h2 {
+        margin-bottom: 40px;
     }
-     }
+    li {
+        color: white;
+        list-style-type: circle;
+        font-weight: 300;
+        &:last-of-type {
+            box-shadow: none;
+        }
+    }
+    .calender-btn{
+        min-width:60%;
+    }
 }
 
 // /* To Top Button Styles
@@ -525,8 +502,8 @@ footer {
     height: 200px;
     width: 100%;
     background: #283332;
-    .footer-section{
-        margin-top:-150px;
+    .footer-section {
+        margin-top: -150px;
     }
 }
 
@@ -548,7 +525,5 @@ footer {
     // box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
     transition-duration: 0.6s;
 }
-
-
 
 @import "mediaqueries";
